--- a/barobaro/index.html
+++ b/barobaro/index.html
@@ -11,14 +11,25 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter&family=League+Spartan:wght@600&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@702&display=swap" rel="stylesheet">
 </head>
 <body>
+  <div class="d4">
+      <p class="s4">10,000+ of our <br> users love our <br> products.</p>
+      <p class="s5">We only provide great products combined with excelent <br>
+      costumer servise. See wthat our satisfied costumers are <br>
+      sayng about our services
+      </p>
+  </div>
+</body>
   <div class="d1">
     <img class="f1" src="photoes/image-colton.jpg" alt="colton photo">
     <p class="p4">
         Colton Smith
     </p>
-    <p class="p5">
+    <p class="p5">z
         verified buyer
     </p>
      <p class="p1">
